<resources>

    <string name="app_name">Car Remote</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Car Remote</string>
    <string name="forward">Forward</string>
    <string name="right">Right</string>
    <string name="backward">Backward</string>
    <string name="left">Left</string>
    <string name="stop">Stop</string>

</resources>